feat: final report modeling improvements
