# backend/internal/application/readmodels/report.go
@@ -1,10 +1,10 @@
 package readmodels
 
 type GameResult struct {
-	PlayerReport      FinalReport       `json:"player_report"`
-	Breakdown         ScoreBreakdown    `json:"breakdown"`
-	NarrativeFeedback string            `json:"narrative_feedback"`
-	BreakdownDetails  map[string]string `json:"breakdown_details"`
+	PlayerReport      FinalReport           `json:"player_report"`
+	Breakdown         ScoreBreakdown        `json:"breakdown"`
+	NarrativeFeedback string                `json:"narrative_feedback"`
+	BreakdownDetails  ScoreBreakdownDetails `json:"breakdown_details"`
 }
 
 type FinalReport struct {
@@ -21,4 +21,12 @@ type ScoreBreakdown struct {
 	HowCorrect      bool `json:"how_correct"`
 	WhenCorrect     bool `json:"when_correct"`
 	EvidenceCorrect bool `json:"evidence_correct"`
+}
+
+type ScoreBreakdownDetails struct {
+	Who      string `json:"who"`
+	Why      string `json:"why"`
+	How      string `json:"how"`
+	When     string `json:"when"`
+	Evidence string `json:"evidence"`
 }
